RESOLVED FIXED272270
Speculative fix for WinCairo Debug following 277104@main
https://bugs.webkit.org/show_bug.cgi?id=272270
Summary Speculative fix for WinCairo Debug following 277104@main
Ross Kirsling
Reported 2024-04-05 22:54:17 PDT
.
Attachments
Ross Kirsling
Comment 1 2024-04-05 22:56:37 PDT
EWS
Comment 2 2024-04-05 23:37:15 PDT
Committed 277154@main (34e783df3303): <https://commits.webkit.org/277154@main> Reviewed commits have been landed. Closing PR #26931 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-05 23:38:14 PDT
Note You need to log in before you can comment on or make changes to this bug.