Speculative fix for WinCairo Debug following 277104@main https://bugs.webkit.org/show_bug.cgi?id=272270

Unreviewed build fix.

* Source/WebCore/platform/graphics/texmap/TextureMapperShaderProgram.cpp:
(WebCore::getShaderLog):
(WebCore::getProgramLog):
Clarifying that it should be std::span wasn't enough, so clarify that it should be std::span<const char>.

Canonical link: https://commits.webkit.org/277154@main